<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/z_pub"
            android:title="@string/menu_z_pub" />

        <item
            android:id="@+id/z_sub"
            android:title="@string/menu_z_sub" />

        <item
            android:id="@+id/z_queryable"
            android:title="@string/menu_z_queryable" />

        <item
            android:id="@+id/z_put"
            android:title="@string/menu_z_put" />

        <item
            android:id="@+id/z_delete"
            android:title="@string/menu_z_delete" />

        <item
            android:id="@+id/z_get"
            android:title="@string/menu_z_get" />

        <item
            android:id="@+id/z_get_liveliness"
            android:title="@string/z_get_liveliness" />

        <item
            android:id="@+id/z_info"
            android:title="@string/z_info" />

        <item
            android:id="@+id/z_liveliness"
            android:title="@string/z_liveliness" />

        <item
            android:id="@+id/z_sub_liveliness"
            android:title="@string/z_sub_liveliness" />

        <item
            android:id="@+id/z_ping"
            android:title="@string/z_ping" />

        <item
            android:id="@+id/z_pong"
            android:title="@string/z_pong" />

        <item
            android:id="@+id/z_pub_thr"
            android:title="@string/z_pub_thr" />

        <item
            android:id="@+id/z_sub_thr"
            android:title="@string/z_sub_thr" />

        <item
            android:id="@+id/z_scout"
            android:title="@string/z_scout" />

    </group>
</menu>